--- a/examples/cv/research_interests.tex
+++ b/examples/cv/research_interests.tex
@@ -2,7 +2,7 @@
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
 %\cvsectionspecifiedcolor{rainbowcolor-orange}{\faGears \acvHeaderIconSep Research Interests}
-\cvsectionspecifiedcolor{awesome-red}{\faGears \acvHeaderIconSep Areas of Interest}
+\cvsectionspecifiedcolor{awesome-nephritis}{\faGears \acvHeaderIconSep Áreas de  Interesse}
 
 
 %-------------------------------------------------------------------------------
@@ -18,17 +18,18 @@
     {}
     {}
     {    	
-	  \vspace{-1.7cm}
+	  \vspace{-1.0cm}
       \begin{multicols}{2}
       \begin{cvitems}
-        \item {Touch/Voice/Camera-based HCI technologies.}
-        \item {3D Animation/Modelling \& Geometrical Computing.}
-        \item {Multi-Core CPU/GPU and Cloud computing.}
-        \item {Computational Fluids Dynamics (CFD).}
-        \item {Artificial Intelligence, Robotics, and Cybernetics.}
-        \item {Computer Games \& Gamification.}
-        \item {Workforce scheduling \& management software.}
-        \item {Network Security \& Configuration \& Administration.}
+		\item {Lidar com crianças e/ou animais.} \\ 
+		\item {Limpeza \& Higiene no trabalho.}  \\    
+        \item {Línguas.} \\
+        \item {Moda, Vestuário e Calçado.} \\   
+        \item {Perfumaria \& produtos/acessórios de beleza.} \\  
+        \item {Gerir pessoas e/ou equipas.} \\
+        \item {Gerir recursos.} \\
+        \item {Café/hotelaria.} \\                    
+        \item {Medicina.} \\
       \end{cvitems}
 	  \end{multicols}
 	  \vspace{-0.5cm}
