--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -1,28 +1,81 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Skills}
+%\cvsectionspecifiedcolor{rainbowcolor-yellow}{\faBarChart \acvHeaderIconSep Skills}
+\cvsectionspecifiedcolor{awesome-nephritis}{\faBarChart \acvHeaderIconSep Competências}
 
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-\begin{cvskills}
+
+\begin{cventries}
 
 %---------------------------------------------------------
-  \cvskill
-    {Programming} % Category
-    {Python, C/C++, Scala, JAVA, Node.JS, OCaml, LaTeX} % Skills
+  \vspace{0.5cm}
+  \cventry
+    {Competências de comunicação:} % title
+    {} 
+    {} 
+    {} 
+    {
+      \vspace{0.4cm}
+      \begin{cvitems} % Description(s)
+        \item {Boa capacidade de comunicação e de interação com o publico: Porta voz de eleição nos grupos a que pertenci em ambiente escolar; com clientes a nível  profissional nacional e no estrangeiro\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}.}
+        \item {Capacidade de ligar e interagir com crianças\ref{4}{$^{[4]}$}.}
+        \item {Rápida aprendizagem de línguas e de metodologias no local de trabalho\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}.} 
+      \end{cvitems}
+    }  
+%  %\vspace{-0.4cm} 
+    
+%---------------------------------------------------------
+  \cventry
+    {Competências de organização:} % title
+    {} 
+    {} 
+    {} 
+    {
+      \vspace{0.4cm} 
+      \begin{cvitems} % Description(s)
+        \item {Organizada, responsável, e com capacidade de liderança.\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}.} 
+        \item {Líder e porta voz de grupo e a pessoa encarregue de distribuir tarefas.\ref{3}{$^{[3]}$}.}
+        \item {Lidar com clientes e crianças em ambiente profissional\ref{5}{$^{[5]}$}.}
+      \end{cvitems}
+    }        
+  %\vspace{-0.4cm}   
+    
 
 %---------------------------------------------------------
-  \cvskill
-    {Web} % Category
-    {Django with Python, Express with Node.JS, HTML5, LESS} % Skills
+  \cventry
+    {Competências digitais:} % title
+    {} 
+    {} 
+    {} 
+    {
+      \vspace{0.4cm}
+      \begin{cvitems} % Description(s)
+        \item {Capacidade de promover pessoas/produtos/marcas em redes sociais (Instagram/Facebook)\ref{3}{$^{[3]}$}.}
+        \item {Bom domínio do Microsoft Office, nomeadamente: Excel, Word, Skype, e Outlook. competências adquiridas em na disciplina de (TIC), que terminei com 17 valores\ref{1}{$^{[1]}$}\ref{5}{$^{[5]}$}.} 
+      \end{cvitems}
+    }  
+  \vspace{-0.2cm} 
+
 
 %---------------------------------------------------------
-  \cvskill
-    {Languages} % Category
-    {Korean, English, Japanese, Chinese} % Skills
-
+  \cventry
+    {} % title
+    {} 
+    {} 
+    {} 
+    {
+      \begin{cvitems} % Description(s)
+        \item[]{\textbf{Pessoal}: \label{1}{<1 Ano$^{[1]}$} \label{2}{1-2 Anos$^{[2]}$} \label{3}{+2 Anos$^{[3]}$}
+		\hspace{2.2cm}
+		\textbf{Profissional}: \label{4}{<1 Ano$^{[4]}$}\label{5}{1-2 Anos$^{[5]}$}}		
+      \end{cvitems}
+    }  
+  \vspace{0.2cm} 
+      
 %---------------------------------------------------------
-\end{cvskills}
+
+\end{cventries}
