--- a/examples/cv/additional_information.tex
+++ b/examples/cv/additional_information.tex
@@ -2,7 +2,7 @@
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
 %\cvsectionspecifiedcolor{rainbowcolor-cyan}{\faInfoCircle \acvHeaderIconSep Additional Information}
-\cvsectionspecifiedcolor{awesome-red}{\faInfoCircle \acvHeaderIconSep Additional Information}
+\cvsectionspecifiedcolor{rainbowcolor-red}{\faInfoCircle \acvHeaderIconSep Additional Information}
 
 
 %-------------------------------------------------------------------------------
@@ -19,7 +19,7 @@
     {
       \vspace{-.6cm}
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item[] {\hspace{-.4cm} \textbf{Researcher} with 13 international scientific articles published (4 journal and 9 conferences).}
+        \item[] {\hspace{-.4cm} \textbf{Researcher} with 11 international scientific articles published (2 journal and 9 conferences).}
         \item[] {\hspace{-.4cm} \textbf{Keynote speaker} at 9 technical, technological and scientific events.}
 %        \item[] {\hspace{-.4cm} \textbf{Lab Instructor} with proven ability to create course materials and evaluate practical projects.}
         \item[] {\hspace{-.4cm} \textbf{B1/B Drivers license}}
