--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Education}
+\cvsectionspecifiedcolor{awesome-nephritis}{\faGraduationCap \acvHeaderIconSep Educação}
 
 
 %-------------------------------------------------------------------------------
@@ -11,15 +11,12 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - PRESENT} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
-      \end{cvitems}
-    }
+    {Ensino secundário - Ciências e Tecnologias} % Degree
+    {\href{http://www.aesa.edu.pt/edu/}{Escola secundaria de Santo André}} % Institution
+    {Barreiro (Portugal)} % Location
+    {Set. 2006 - Junho 2011} % Date(s)    
+    {Matemática A, Português, Biologia, Físico-Química A, Psicologia B, Inglês, Educação Física}
+    \vspace{0.5cm}
 
 %---------------------------------------------------------
 \end{cventries}
