--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -1,7 +1,8 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Experience}
+
+\cvsectionspecifiedcolor{awesome-nephritis}{\faBriefcase \acvHeaderIconSep Experiência Profissional}
 
 
 %-------------------------------------------------------------------------------
@@ -9,86 +10,102 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Exp. Apr. 2016} % Date(s)
+%---------------------------------------------------------    
+  \cventry  
+  	{Funcionária de Café} % Job title
+    {Café O Carlos} % Organization
+    {Barreiro (Portugal)} % Location
+    {0-1 Anos} % {Dez. 2015 - Jul. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
-        \item {Improved functionality on military command and control system for incident response with Java Servlet.}
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
+		\item {Atendimento de clientes.}
+  		\item {Limpeza.}
+  		\item {Gestão de encomendas e stock.}
+  		\item {Organização e Gestão do estabelecimento.}
+  		\item {Operadora de caixa.}
+      \end{cvitems}
+    }  
+
+%---------------------------------------------------------    
+  \cventry    
+    {Explicadora 1º ciclo} % Job title
+    {} % Organization
+    {Barreiro (Portugal)} % Location
+    {0-1 Anos} % {Nov. 2015 - Jun. 2016} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+		\item {Revisão da matéria leccionada.}
+  		\item {Auxilio na realização de trabalhos de casa.}
+  		\item {Criação de dinâmicas com exercícios práticos.}
+      \end{cvitems}
+    }    
+    
+%---------------------------------------------------------    
+  \cventry    
+    {Assistente de Acção Social} % Job title
+    {Appda-Setúbal Associação Autismo} % Organization
+    {Setúbal (Portugal)} % Location
+    {0-1 Anos} % {Dez. 2011} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+		\item {Desenvolver e realizar actividades com crianças.}
       \end{cvitems}
     }
+    \vspace{0.5cm}      
 
-%---------------------------------------------------------
-  \cventry
-    {Game Developer Intern at Global Internship Program} % Job title
-    {NEXON} % Organization
-    {Seoul, S.Korea \& LA, U.S.A} % Location
-    {Jan. 2013 - Feb. 2013} % Date(s)
+%---------------------------------------------------------    
+  \cventry    
+    {Funcionária de Loja} % Job title
+    {Ambiente e jardim internacionale} % Organization
+    {Dungannon, Irlanda} % Location
+    {0-1 Anos} % {Fev. 2014 - Nov. 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market. Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic, designed game graphics.}
-        \item {Won the 2nd prize in final evaluation.}
+		\item {Atendimento personalizado ao cliente.}
+  		\item {Reposição de mercadoria e respetiva arrumação.}
       \end{cvitems}
-    }
+    }      
 
-%---------------------------------------------------------
-  \cventry
-    {Researcher for <Detecting video’s torrents using image similarity algorithms>} % Job title
-    {Undergraduate Research, Computer Vision Lab(Prof. Bohyung Han)} % Organization
-    {Pohang, S.Korea} % Location
-    {Sep. 2012 - Feb. 2013} % Date(s)
+%---------------------------------------------------------    
+  \cventry    
+    {Promotora de Vendas} % Job title
+    {NV and Gino} % Organization
+    {Dungannon, Irlanda} % Location
+    {0-1 Anos} % {?} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Researched means of retrieving a corresponding video based on image contents using image similarity algorithm.}
-        \item {Implemented prototype that users can obtain torrent magnet links of corresponding video relevant to an image on web site.}
-      \end{cvitems} 
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer Trainee} % Job title
-    {Software Maestro (funded by Korea Ministry of Knowledge and Economy)} % Organization
-    {Seoul, S.Korea} % Location
-    {Jul. 2012 - Jun. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Performed research memory management strategies of OS and implemented in Python an interactive simulator for Linux kernel memory management.}
+		\item {Atendimento personalizado ao cliente.}
+  		\item {Consultora de moda.}
+  		\item {Promotora de vestuário, calçado e produtos/acessórios de moda.}
       \end{cvitems}
-    }
+    }      
 
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {ShitOne Corp. (Start-up company)} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
+%---------------------------------------------------------    
+  \cventry    
+    {Operadora em linha} % Job title
+    {Moy Park} % Organization
+    {Ballymena, Irlanda} % Location
+    {0-1 Anos} % {Mar. 2014 - Jun. 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer. Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
+		\item {Operadora em linha.}
+  		\item {Manutenção do peso das embalagens.}
       \end{cvitems}
-    }
+    }   
 
-%---------------------------------------------------------
-  \cventry
-    {Freelance Penetration Tester} % Job title
-    {SAMSUNG Electronics} % Organization
-    {S.Korea} % Location
-    {Sep. 2013, Mar. 2011 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-        \item {Conducted penetration testing on SAMSUNG Smart TV.}
-      \end{cvitems}
-      %\begin{cvsubentries}
-      %  \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
-      %  \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
-      %\end{cvsubentries}
-    }
-
-%---------------------------------------------------------
+%---------------------------------------------------------    
+%  \cventry    
+%    {Assistente de Acção Social} % Job title
+%    {Appda-Setúbal Associação Autismo} % Organization
+%    {Setúbal (Portugal)} % Location
+%    {<1 Ano} % {Dez. 2011} % Date(s)
+%    {
+%      \begin{cvitems} % Description(s) of tasks/responsibilities
+%		\item {Desenvolver e realizar actividades com crianças.}
+%      \end{cvitems}
+%    }
+%    \vspace{0.5cm}     
+    
+     
+%---------------------------------------------------------   
 \end{cventries}
