--- a/examples/cv/languages.tex
+++ b/examples/cv/languages.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Presentation}
+\cvsectionspecifiedcolor{awesome-nephritis}{\faGlobe \acvHeaderIconSep Domínio de Línguas}
 
 
 %-------------------------------------------------------------------------------
@@ -11,13 +11,16 @@
 
 %---------------------------------------------------------
   \cventry
-    {Presenter for <DEFCON 20th : The way to go to Las Vegas>} % Role
-    {6th CodeEngn (Reverse Engineering Conference)} % Event
-    {Seoul, S.Korea} % Location
-    {Jul. 2012} % Date(s)
+    {}
+    {}
+    {}
+    {} 
     {
-      \begin{cvitems} % Description(s)
-        \item {Introduced CTF(Capture the Flag) hacking competition and advanced techniques and strategy for CTF}
+	  \vspace{-0.5cm}
+      \begin{cvitems} % Description(s) of experience/contributions/knowledge
+        \item[] {\hspace{-.31cm}\textbf{Utilizador Avançado (CEFRL:C2):} Português (Nativo).}
+        \item[] {\hspace{-.31cm}\textbf{Utilizador Avançado (CEFRL:C1):} Inglês.}
+        \item[] {\hspace{-.31cm}\textbf{Utilizador Independente (CEFRL:B1):} Espanhol, Italiano e Francês.}
       \end{cvitems}
     }
 
