--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Education}
+\cvsectionspecifiedcolor{awesome-skyblue}{\faGraduationCap \acvHeaderIconSep Education \& Training}
 
 
 %-------------------------------------------------------------------------------
@@ -11,15 +11,33 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - PRESENT} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
-      \end{cvitems}
-    }
+    {Initial training in C++ (Vida Ativa)} % Degree
+    {IEFP} % Institution
+    {Portugal} % Location
+    {Oct. 2016 - Dec. 2016} % Date(s)    
+    {}
+%---------------------------------------------------------
+  \cventry
+    {Masters in Industrial Design} % Degree
+    {Universidade da Beira Interior} % Institution
+    {Covilhã (Portugal)} % Location
+    {Sept. 2012 - July 2014} % Date(s)    
+    {}
+%---------------------------------------------------------
+  \cventry
+    {Bachelor in Industrial Design} % Degree
+    {} % Institution
+    {} % Location
+    {Sept. 2008 - July 2012} % Date(s)    
+    {}
+%---------------------------------------------------------
+  \cventry
+    {CT Course of Marketing and Business Strategy (12th gr.)} % Degree
+    {Colégio Internato dos Carvalhos (CIC)} % Institution
+    {Vila Nova de Gaia (Portugal)} % Location
+    {Sept. 2005 - June 2008} % Date(s)    
+    {}
+    \vspace{0.5cm}
 
 %---------------------------------------------------------
 \end{cventries}
