--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -1,7 +1,8 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Experience}
+
+\cvsectionspecifiedcolor{awesome-skyblue}{\faBriefcase \acvHeaderIconSep Experience}
 
 
 %-------------------------------------------------------------------------------
@@ -9,86 +10,68 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Exp. Apr. 2016} % Date(s)
+%---------------------------------------------------------    
+  \cventry  
+  	{Mechanical Designer} % Job title
+    {IDOM Consulting, Engineering, Architecture} % Organization
+    {Lisbon (Portugal)} % Location
+    {June 2019 - Present} % {Dez. 2015 - Jul. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
-        \item {Improved functionality on military command and control system for incident response with Java Servlet.}
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
+		\item {Civil engineering Structure Design, Piping and support}
+  		\item {P\&ID}
+  		\item {Project development}
+  		\item {Mechanical equipment design}
       \end{cvitems}
+    }  
+    
+%---------------------------------------------------------    
+  \cventry    
+    {Customer Service Representative} % Job title
+    {Teleperformance/WISH} % Organization
+    {Lisbon (Portugal)} % Location
+    {Aug. 2017 - Sept. 2018} % {Dez. 2011} % Date(s)
+    {      
     }
-
-%---------------------------------------------------------
-  \cventry
-    {Game Developer Intern at Global Internship Program} % Job title
-    {NEXON} % Organization
-    {Seoul, S.Korea \& LA, U.S.A} % Location
-    {Jan. 2013 - Feb. 2013} % Date(s)
+    
+%---------------------------------------------------------    
+  \cventry    
+    {Waitress/Cook/Barmaid} % Job title
+    {Restaurant/Bar Taberna "Laranjinha"} % Organization
+    {Covilhã (Portugal)} % Location
+    {Sept. 2015 - May 2016} % {Nov. 2015 - Jun. 2016} % Date(s)
     {
+    }    
+    
+%---------------------------------------------------------    
+  \cventry    
+    {Designer} % Job title
+    {\href{http://boostmarkgroup.com/}{"BoostMarkGroup"} publicity/marketing} % Organization
+    {Covilhã (Portugal)} % Location
+    {Sept. 2014 - Apr. 2015} % {Dez. 2011} % Date(s)
+    {      
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market. Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic, designed game graphics.}
-        \item {Won the 2nd prize in final evaluation.}
+      	\item {Design}
+		\item {Marketing}
+		\item {Web design}
       \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Researcher for <Detecting video’s torrents using image similarity algorithms>} % Job title
-    {Undergraduate Research, Computer Vision Lab(Prof. Bohyung Han)} % Organization
-    {Pohang, S.Korea} % Location
-    {Sep. 2012 - Feb. 2013} % Date(s)
+    }  
+    
+%---------------------------------------------------------    
+  \cventry    
+    {Curricular internship} % Job title
+    {"YDREAMS ROBOTICS" FAB LAB Aldeias de Xisto} % Organization
+    {Fundão (Portugal)} % Location
+    {} % {Dez. 2011} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Researched means of retrieving a corresponding video based on image contents using image similarity algorithm.}
-        \item {Implemented prototype that users can obtain torrent magnet links of corresponding video relevant to an image on web site.}
-      \end{cvitems} 
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer Trainee} % Job title
-    {Software Maestro (funded by Korea Ministry of Knowledge and Economy)} % Organization
-    {Seoul, S.Korea} % Location
-    {Jul. 2012 - Jun. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Performed research memory management strategies of OS and implemented in Python an interactive simulator for Linux kernel memory management.}
+      	\item {3d Modeling \& Design}
+		\item {Final Product Developments}
+		\item {Arduino}
+		\item {Prototyping}
       \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {ShitOne Corp. (Start-up company)} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer. Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Freelance Penetration Tester} % Job title
-    {SAMSUNG Electronics} % Organization
-    {S.Korea} % Location
-    {Sep. 2013, Mar. 2011 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-        \item {Conducted penetration testing on SAMSUNG Smart TV.}
-      \end{cvitems}
-      %\begin{cvsubentries}
-      %  \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
-      %  \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
-      %\end{cvsubentries}
-    }
-
-%---------------------------------------------------------
+    }  
+    
+     
+%---------------------------------------------------------   
 \end{cventries}
