--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -1,28 +1,85 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Skills}
+%\cvsectionspecifiedcolor{rainbowcolor-yellow}{\faBarChart \acvHeaderIconSep Skills}
+\cvsectionspecifiedcolor{awesome-skyblue}{\faBarChart \acvHeaderIconSep Skills}
 
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-\begin{cvskills}
+
+\begin{cventries}
 
 %---------------------------------------------------------
-  \cvskill
-    {Programming} % Category
-    {Python, C/C++, Scala, JAVA, Node.JS, OCaml, LaTeX} % Skills
+  \vspace{0.5cm}
+  \cventry
+    {Communication} % title
+    {} 
+    {} 
+    {} 
+    {
+      \vspace{0.4cm}
+      \begin{cvitems} % Description(s)
+        \item {Good communication skills.}
+        \item {Event promotions.}
+        \item {Customer service experience.} 
+        \item {Ability to work in team acquired in several collaborative projects.}         
+      \end{cvitems}
+    }  
+%  %\vspace{-0.4cm} 
+    
+%---------------------------------------------------------
+  \cventry
+    {Organization} % title
+    {} 
+    {} 
+    {} 
+    {
+      \vspace{0.4cm} 
+      \begin{cvitems} % Description(s)
+        \item {Good independent work, acquired while working as a trainee.} 
+        \item {Experience organizing and managing events: festivals, concerts, parties, workshops.}
+      \end{cvitems}
+    }        
+  %\vspace{-0.4cm}   
+    
 
 %---------------------------------------------------------
-  \cvskill
-    {Web} % Category
-    {Django with Python, Express with Node.JS, HTML5, LESS} % Skills
+  \cventry
+    {Work/Design} % title
+    {} 
+    {} 
+    {} 
+    {
+      \vspace{0.4cm}
+      \begin{cvitems} % Description(s)
+        \item {Project methodology.}
+        \item {Rapid construction of models and test models.}
+        \item {Processing of statistical data.} 
+      \end{cvitems}
+    }  
+  \vspace{-0.2cm} 
+
 
 %---------------------------------------------------------
-  \cvskill
-    {Languages} % Category
-    {Korean, English, Japanese, Chinese} % Skills
+  \cventry
+    {Technologies \& Programming} % title
+    {} 
+    {} 
+    {} 
+    {
+      \begin{cvitems} % Description(s)
+        \item[]{AutoCAD 2D/3D, CADWorx, Navisworks, Solidworks, Rhinoceros 3D, Autodesk 2D, Autodesk Inventor, CAD/CAM}
+        \item[]{Rendering 3D models}
+  		\item[]{Microsoft Office, CorelDraw}
+		\item[]{Arduino}
+		\item[]{MailChimp Plataform}
+		\item[]{C++}
+      \end{cvitems}
+    }  
+  \vspace{0.2cm} 
 
 %---------------------------------------------------------
-\end{cvskills}
+
+\end{cventries}
