--- a/examples/cv/languages.tex
+++ b/examples/cv/languages.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Presentation}
+\cvsectionspecifiedcolor{awesome-skyblue}{\faGlobe \acvHeaderIconSep Languages}
 
 
 %-------------------------------------------------------------------------------
@@ -11,13 +11,15 @@
 
 %---------------------------------------------------------
   \cventry
-    {Presenter for <DEFCON 20th : The way to go to Las Vegas>} % Role
-    {6th CodeEngn (Reverse Engineering Conference)} % Event
-    {Seoul, S.Korea} % Location
-    {Jul. 2012} % Date(s)
+    {}
+    {}
+    {}
+    {} 
     {
-      \begin{cvitems} % Description(s)
-        \item {Introduced CTF(Capture the Flag) hacking competition and advanced techniques and strategy for CTF}
+	  \vspace{-0.5cm}
+      \begin{cvitems} % Description(s) of experience/contributions/knowledge
+        \item[] {\hspace{-.31cm}\textbf{Proficient User (CEFRL:C2):} Ukranian (Native), Russian (Native), Portuguese, English}
+        \item[] {\hspace{-.31cm}\textbf{Basic User (CEFRL:A2):} Spanish}
       \end{cvitems}
     }
 
